Wed Feb 16 22:46:17 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tools/modeling/features/org.opendds.modeling.site/README.txt:

          Added a step for generating a single .zip file containing the site.

Wed Feb 16 22:02:48 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/codegen/model/Sync.h:
        * tools/modeling/codegen/model/Sync.cpp:

          Add conditional sync for readers.

        * tools/modeling/tests/Arrays/subscriber.cpp:
        * tools/modeling/tests/CfTopic/subscriber.cpp:
        * tools/modeling/tests/CompositeKey/subscriber.cpp:
        * tools/modeling/tests/CopyTopicQos/subscriber.cpp:
        * tools/modeling/tests/DataLibRef/subscriber.cpp:
        * tools/modeling/tests/DomainZero/subscriber.cpp:
        * tools/modeling/tests/EmptyLibs/subscriber.cpp:
        * tools/modeling/tests/Exchange/subscriber.cpp:
        * tools/modeling/tests/ExternalPolicies/subscriber.cpp:
        * tools/modeling/tests/InvalidNames/subscriber.cpp:
        * tools/modeling/tests/Messenger/subscriber.cpp:
        * tools/modeling/tests/MessengerDpQos/subscriber.cpp:
        * tools/modeling/tests/MessengerGlobalNs/subscriber.cpp:
        * tools/modeling/tests/MessengerMixed/subscriber.cpp:
        * tools/modeling/tests/MessengerMulti/subscriber.cpp:
        * tools/modeling/tests/MessengerPubQos/subscriber.cpp:
        * tools/modeling/tests/MessengerSimpleTypes/subscriber.cpp:
        * tools/modeling/tests/MessengerSplit/subscriber.cpp:
        * tools/modeling/tests/MessengerWriterQos/subscriber.cpp:
        * tools/modeling/tests/MultiDCPS/subscriber.cpp:
        * tools/modeling/tests/MultiInstance/subscriber.cpp:
        * tools/modeling/tests/PolicyLib/subscriber.cpp:
        * tools/modeling/tests/ReaderQos/subscriber.cpp:
        * tools/modeling/tests/ReferExternalProj/subscriber.cpp:
        * tools/modeling/tests/Sequences/subscriber.cpp:
        * tools/modeling/tests/SubscriberQos/subscriber.cpp: